--- a/style.css
+++ b/style.css
@@ -462,9 +462,9 @@ padding: 0;
 display: flex;
 align-items: flex-start;
 justify-content: space-between;
-gap: 2rem;
-margin-bottom: 2rem;
-padding: 0;
+gap: 1rem;
+margin-bottom: 1rem;
+padding: 0rem;
 }
 
 
@@ -1377,3 +1377,18 @@ background-color: #ff3333;
     text-align: left; /* Ensure math aligns left */
   }
   
+  .intro-image4 {
+    display: flex;
+    align-items: center;
+    width: 16rem;
+    height: auto;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    border: 4px solid rgba(0, 128, 255, 0.2);
+    flex-shrink: 0;
+    margin: 0;
+    }
+
+.intro-image-container{
+    margin-top: 0;
+    
+}
